add create func is done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </form>
       <div class="todo_container">
-        <div class="todo">
+        <!-- <div class="todo">
           <div class="todo_left">
             <input type="checkbox" class="todo_cb" />
             <span class="todo_text">Markete git</span>
@@ -25,7 +25,7 @@
           <div class="todo_right">
             <button class="todo_delete">Delete</button>
             <button class="todo_edit">Edit</button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
