--- a/index.html
+++ b/index.html
@@ -12,24 +12,23 @@
       <form class="todo_form">
         <h1 class="todo_title">Veysel's Todo</h1>
         <div class="todo_div">
-          <input type="text" class="todo_input" placeholder="type here " />
+          <input type="text" class="todo_input" placeholder="type here.." />
           <button type="submit" class="todo_btn">+</button>
         </div>
       </form>
-      <div class="todo_container">
-        <!-- <div class="todo">
-          <div class="todo_left">
-            <input type="checkbox" class="todo_cb" />
-            <span class="todo_text">Markete git</span>
-          </div>
-          <div class="todo_right">
-            <button class="todo_delete">Delete</button>
-            <button class="todo_edit">Edit</button>
-          </div> -->
-        </div>
-      </div>
+      <div class="todo_container"></div>
     </div>
 
     <script src="app.js"></script>
   </body>
 </html>
+
+<!-- <div class="todo">
+  <div class="todo_left">
+    <input type="checkbox" class="todo_cb" />
+    <span class="todo_text">Markete git</span>
+  </div>
+  <div class="todo_right">
+    <button class="todo_delete">Delete</button>
+    <button class="todo_edit">Edit</button>
+  </div> -->
